--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">หน้าแรก</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">ความสามารถ</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">ประวัติการศึกษา</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education0">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
@@ -49,7 +49,8 @@
                 <div class="row w-100">
                     <div class="col-12 col-md-4">
                         <span class="d-lg-block">
-                            <img class="img-fluid img-profile rounded mx-auto mb-2" id="ProfileAbout" src="img/ProfileAbout.jpg" alt="..." />
+                            <img class="img-fluid img-profile rounded mx-auto mb-2 ProfileAbout" src="img/ProfileAbout.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                        </span>
                     </div>
 
                     <div class="col-12 col-md-8">
@@ -72,54 +73,105 @@
                 </div>
             </section>
             <hr class="m-0" />
+<!-- Skills-->
+<section class="resume-section" id="skills">
+    <div class="resume-section-content">
+        <h2>ความสามารถ</h2>
+        <h4 class="text-primary mb-5"><b>ability</b></h4>
+        <div class="subheading mb-3">Programming Languages & Tools</div>
+        <ul class="list-inline dev-icons">
+            <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+            <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+            <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+            <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+            <li class="list-inline-item"><i class="fab fa-react"></i></li>
+            <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+            <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+            <li class="list-inline-item"><i class="fab fa-less"></i></li>
+            <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+            <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
+            <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+            <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+        </ul>
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+            <li>
+                <span class="fa-li"><i class="fas fa-check"></i></span>
+                Mobile-First, Responsive Design
+            </li>
+            <li>
+                <span class="fa-li"><i class="fas fa-check"></i></span>
+                Cross Browser Testing & Debugging
+            </li>
+            <li>
+                <span class="fa-li"><i class="fas fa-check"></i></span>
+                Cross Functional Teams
+            </li>
+            <li>
+                <span class="fa-li"><i class="fas fa-check"></i></span>
+                Agile Development & Scrum
+            </li>
+        </ul>
+    </div>
+</section>
+<hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 >ประวัติการศึกษา</h2>
                     <h4 class="text-primary mb-5"><b>Education</b></h4>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
-                        <div class="flex-grow-1">
-                            <h4 class="mb-1 METextFont text-primary">ระดับมัธยมศึกษาตอนปลาย</h4>
-                            <div class="h3 mb-3 METextFont text-black">โรงเรียนมัญจาศึกษา  <span class="badge bg-primary METextFont MEHeaderConfig">กำลังศึกษาอยู่</span></div>
-                            <div class="row">
-                                <div class="col-4 col-md-2 mb-3"> <img src="img/ManchasuksaLOGO.png" class="img img-fluid">
+
+                    <ul class="timeline">
+                        <li id="timelinenow">
+                            <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                                <div class="flex-grow-1">
+                                    <h4 class="mb-1 METextFont text-primary">ระดับมัธยมศึกษาตอนปลาย</h4>
+                                    <div class="h3 mb-3 METextFont text-black">โรงเรียนมัญจาศึกษา  <span class="badge bg-primary METextFont MEHeaderConfig">กำลังศึกษาอยู่</span></div>
+                                    <div class="row">
+                                        <div class="col-4 col-md-2 mb-3"><img src="img/ManchasuksaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                        </div>
+                                        <div class="col-8 col-md-10 METextSizeConfig">
+                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.96 (5 ภาคเรียน)</b></p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-8 col-md-10 METextSizeConfig">
-                                    <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.96 (5 ภาคเรียน)</b></p>
-                                </div>
+                                <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2562 - ปัจจุบัน</span></div>
                             </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2562 - ปัจจุบัน</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
-                        <div class="flex-grow-1">
-                            <h4 class="mb-1 METextFont text-primary">ระดับมัธยมศึกษาตอนต้น</h4>
-                            <h3 class="mb-3">โรงเรียนมัญจาศึกษา</h3>
-                            <div class="row">
-                                <div class="col-4 col-md-2 mb-3"> <img src="img/ManchasuksaLOGO.png" class="img img-fluid">
+                        </li>
+                        <li>
+                            <div class="d-flex flex-column flex-md-row justify-content-between mb-1">
+                                <div class="flex-grow-1">
+                                    <h4 class="mb-1 METextFont text-primary">ระดับมัธยมศึกษาตอนต้น</h4>
+                                    <h3 class="mb-3">โรงเรียนมัญจาศึกษา</h3>
+                                    <div class="row">
+                                        <div class="col-4 col-md-2 mb-3"> <img src="img/ManchasuksaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                        </div>
+                                        <div class="col-8 col-md-10 METextSizeConfig">
+                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.97</b></p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-8 col-md-10 METextSizeConfig">
-                                    <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.97</b></p>
-                                </div>
+                                <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2559 - 2562</span></div>
                             </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2559 - 2562</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h4 class="mb-1 METextFont text-primary">ระดับประถมศึกษา</h4>
-                            <h3 class="mb-3">โรงเรียนอนุบาลศักดิ์สุภา</h3>
-                            <div class="row">
-                                <div class="col-4 col-md-2 mb-3"> <img src="img/AnubansuksapaLOGO.png" class="img img-fluid">
+                        </li>
+                        <li>
+                            <div class="d-flex flex-column flex-md-row justify-content-between">
+                                <div class="flex-grow-1">
+                                    <h4 class="mb-1 METextFont text-primary">ระดับประถมศึกษา</h4>
+                                    <h3 class="mb-3">โรงเรียนอนุบาลศักดิ์สุภา</h3>
+                                    <div class="row">
+                                        <div class="col-4 col-md-2 mb-3"> <img src="img/AnubansuksapaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                        </div>
+                                        <div class="col-8 col-md-10 METextSizeConfig">
+                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.72</b></p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-8 col-md-10 METextSizeConfig">
-                                    <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.72</b></p>
-                                </div>
+                                <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2553 - 2559</span></div>
                             </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="fas fa-clock"></i> 2553 - 2559</span></div>
-                    </div>
-                </div>
+                        </li>
+                    </ul>
+                 </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
@@ -146,47 +198,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
+            
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
@@ -243,6 +255,15 @@
                 </div>
             </section>
         </div>
+
+        <div class="modal fade" id="popupImgModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+            <img id="imgModalPreview" class="img-fluid w-100">
+            </div>
+          </div>
+
+        <!-- <img class="img-fluid mx-auto mb-2" src="" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"> -->
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
