Edit education info

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                         <div class="col-4 col-md-2 mb-3"><img src="img/ManchasuksaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
                                         </div>
                                         <div class="col-8 col-md-10 METextSizeConfig">
-                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.96 (5 ภาคเรียน)</b></p>
+                                            <p class="METextCONFIG1">สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.96 (5 ภาคเรียน)</b></p>
                                         </div>
                                     </div>
                                 </div>
@@ -182,7 +182,7 @@
                                         <div class="col-4 col-md-2 mb-3"> <img src="img/ManchasuksaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
                                         </div>
                                         <div class="col-8 col-md-10 METextSizeConfig">
-                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.97</b></p>
+                                            <p class="METextCONFIG1">ผลการเรียนเฉลี่ย : <b>3.97</b></p>
                                         </div>
                                     </div>
                                 </div>
@@ -198,7 +198,7 @@
                                         <div class="col-4 col-md-2 mb-3"> <img src="img/AnubansuksapaLOGO.png" class="img img-fluid" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
                                         </div>
                                         <div class="col-8 col-md-10 METextSizeConfig">
-                                            <p>สายการเรียน : <b>วิทย์ - คณิต</b><br> ผลการเรียนเฉลี่ย : <b>3.72</b></p>
+                                            <p class="METextCONFIG1">ผลการเรียนเฉลี่ย : <b>3.72</b></p>
                                         </div>
                                     </div>
                                 </div>
