update Web Achievement and Edit textsize

--- a/index.html
+++ b/index.html
@@ -220,11 +220,12 @@
                         <div class="col-12 col-lg-9 mb-3">
                             <div class="h3 mb-3 METextFont METextDark"><span class="fa-li"><i class="fas fa-trophy text-warning"></i></span><span class="badge bg-primary METextFont MEHeaderConfig2 me-2 ACM-header-font">ผลงานที่ภาคภูมิใจ</span></div>
                             <ul class="fa-ul mb-0"><li><div class="h3 mb-0 METextFont METextDark"><span class="fa-li"><i class="fas fa-trophy text-warning mt-3"></i></span><span class="badge MEBoxBG METextFont MEHeaderConfig2 me-2">ได้รับรางวัลชมเชย</span>การประกวดโครงงานวิทยาศาสตร์ ระดับมัธยมศึกษาตอนปลาย สาขาวิทยาศาสตร์ประยุกต์ </div></li></ul>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>กระทรวงการอุดมศึกษา วิทยาศาสตร์ วิจัยและนวัตกรรม ร่วมกับ สมาคมวิทยาศาสตร์แห่งประเทศไทยในพระบรมราชูปถัมภ์
+                                และ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น</p>
                             <p class="ME-P-TextCONFIG1 mb-1">ในงานสัปดาห์วันวิทยาศาสตร์ ส่วนภูมิภาค(ภาคตะวันออกเฉียงเหนือ)
-                            <br> ประจำปี พ.ศ.2564 ณ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น<br>ในหัวข้อโครงงานเรื่อง : <b>ระบบช่วยเหลืออาสาสมัครหมู่บ้านตรวจสอบ
+                            ประจำปี พ.ศ.2564 ณ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น ในหัวข้อโครงงานเรื่อง : <b>ระบบช่วยเหลืออาสาสมัครหมู่บ้านตรวจสอบ
                             Antigen Test Kit โดยใช้ machine learning</b></p>
-                            <p class="ME-P-TextCONFIG2 mb-1"><b>จัดโดย : </b>กระทรวงการอุดมศึกษา วิทยาศาสตร์ วิจัยและนวัตกรรม ร่วมกับ สมาคมวิทยาศาสตร์แห่งประเทศไทยในพระบรมราชูปถัมภ์
-                            และ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น</p>
+                            
                             <a class="MyGithubbtn" href="https://github.com/bigbossthunyaluk/MachineLearningATK" role="button"><i class="fab fa-github"></i> เข้าชม Github Repository</a>
                             <a class="MyYTbtn" href="https://youtu.be/oIoz8-fFc3U" role="button"><i class="fab fa-youtube"></i> เข้าชมคลิปวิดีโอนำเสนอ</a>
 
@@ -268,8 +269,8 @@
                             <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b> คณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ร่วมกับ
                                 สาขาวิชาฟิสิกส์ คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์</p>
                             <p class="ME-P-TextCONFIG1 mb-1">เป็นการอบรมให้ความรู้ภาคประชาชนทั่วไป เกี่ยวกับหลักการทำงานของเครื่องคอมพิวเตอร์เชิงควอนตัม หลักการทางฟิสิกส์
-                                ที่อยู่เบื้องหลังการทำงาน รวมถึงการนำหลักการของ<br>ควอนตัมคอมพิวเตอร์ไปประยุกต์ใช้ พร้อมกับมีการอบรมภาคปฏิบัติ โดยอาจารย์จากคณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี และสาขาวิชาฟิสิกส์ 
-                                <br>คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์
+                                ที่อยู่เบื้องหลังการทำงาน รวมถึงการนำหลักการของควอนตัมคอมพิวเตอร์ไปประยุกต์ใช้ พร้อมกับมีการอบรมภาคปฏิบัติ โดยอาจารย์จากคณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี และสาขาวิชาฟิสิกส์ 
+                                คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์
                             </p>
                         </div>
                         <div class="col-12 col-lg-3 MEimgContainer">
@@ -315,7 +316,146 @@
 
                     <hr class="mb-4">
                     <div class="h3 mb-1 METextFont METextDark"><span class="badge bg-primary METextFont MEHeaderConfig2 me-2 ACM-header-font">ด้านวิชาการ</span></div>
-                
+
+                    <div class="row mb-1">
+                        <div class="col-12 col-lg-9 mb-3">
+                            <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">เข้าร่วม</span> การประกวดโครงงานวิทยาศาสตร์ ระดับมัธยมศึกษาตอนปลาย สาขาวิทยาศาสตร์ประยุกต์</div>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>กระทรวงการอุดมศึกษา วิทยาศาสตร์ วิจัยและนวัตกรรม ร่วมกับ สมาคมวิทยาศาสตร์แห่งประเทศไทยในพระบรมราชูปถัมภ์
+                                และ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น</p>
+                            <p class="ME-P-TextCONFIG1 mb-1">ในงานสัปดาห์วันวิทยาศาสตร์ ส่วนภูมิภาค(ภาคตะวันออกเฉียงเหนือ)
+                                ประจำปี พ.ศ.2563 ณ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น ในหัวข้อโครงงานเรื่อง <b>"การศึกษาการให้ความร้อนจากเกิดปฏิกิริยาเคมีและการเก็บความร้อนของ
+                                ลูกประคบสมุนไพรรูปทรงกรวยและรูปทรงพีระมิดฐานสามเหลี่ยม"</b> </p>
+                        </div>
+                        <div class="col-12 col-lg-3 MEimgContainer">
+                            <div class="row">
+                                <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/Science Day 2020 - Chemistry.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mb-1">
+                        <div class="col-12 col-md-6 mb-1">
+                            <div class="row mb-1">
+                                <div class="col-12 col-lg-8 mb-1">
+                                    <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">เข้าร่วม</span> การแข่งขันเศรษฐศาสตร์เพชรยอดมงกุฏครั้งที่ 9</div>
+                                    <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>ตลาดหลักทรัพย์ฯ มูลนิธิร่มฉัตร ร่วมกับองค์กรภาครัฐและเอกชน</p>
+                                    <p class="ME-P-TextCONFIG1 mb-1">ได้เข้าแข่งขันรอบเจียระไนเพชร การแข่งขันเศรษฐศาสตร์เพชรยอดมงกุฏครั้งที่ 9 ณ โรงเรียนสตรีวิทยา 2 กรุงเทพมหานคร</p>
+                                </div>
+                                <div class="col-12 col-lg-4 MEimgContainer">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/Economics Contest 2017.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 mb-1">
+                            <div class="row mb-1">
+                                <div class="col-12 col-lg-8 mb-1">
+                                    <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">ได้รับยกย่อง</span> เป็นนักเรียนต้นแบบ "คนดีศรีมัญจา"</div>
+                                    <p class="ME-P-TextCONFIG3 mb-1"><b>โดย : </b>โรงเรียนมัญจาศึกษา</p>
+                                    <p class="ME-P-TextCONFIG1 mb-1">นักเรียนจิตอาสางานโสตทัศนศึกษา ประจำปีการศึกษา 2563</p>
+                                </div>
+                                <div class="col-12 col-lg-4 MEimgContainer">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/Manchasuksa - Mancha good people.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 mb-1">
+                            <div class="row mb-1">
+                                <div class="col-12 col-lg-8 mb-1">
+                                    <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">ได้รางวัลรองชนะเลิศอันดับ 2</span> การประกวดภาพถ่ายทางวิทยาศาสตร์</div>
+                                    <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>โรงเรียนมัญจาศึกษา</p>
+                                    <p class="ME-P-TextCONFIG1 mb-1">ได้รับรางวัลรองชนะเลิศอันดับ 2 การประกวดภาพถ่ายทางวิทยาศาสตร์ ในสัปดาห์วันวิทยาศาสตร์ปีการศึกษา 2563</p>
+                                </div>
+                                <div class="col-12 col-lg-4 MEimgContainer">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/Manshasuksa - Science Day 2020.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 mb-1">
+                            <div class="row mb-1">
+                                <div class="col-12 col-lg-8 mb-1">
+                                    <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">ได้รางวัลชมเชย</span> การแข่งขันตอบปัญหาวิทยาศาสตร์</div>
+                                    <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>โรงเรียนมัญจาศึกษา</p>
+                                    <p class="ME-P-TextCONFIG1 mb-1">ได้รับรางวัลชมเชย การแข่งขันตอบปัญหาวิทยาศาสตร์ สัปดาห์วันวิทยาศาสตร์ ปีการศึกษา 2563</p>
+                                </div>
+                                <div class="col-12 col-lg-4 MEimgContainer">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/Manchasuksa - Science Day Question contest.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="mb-4">
+                    <div class="h3 mb-1 METextFont METextDark"><span class="badge bg-primary METextFont MEHeaderConfig2 me-2 ACM-header-font">ด้านกิจกรรม (จิตอาสา)</span></div>
+                    <div class="h3 mb-2 METextFont METextDark mt-2" style="text-transform:none;">เป็นนักเรียนจิตอาสาช่วยงานฝ่ายงานโสตทัศนศึกษา ถ่ายภาพพิธีงานกิจกรรมต่างๆในโรงเรียนมัญจาศึกษา</div>
+                    <div class="row mb-1">
+                        <div class="col-12 col-sm-3 mb-1">
+                            <img class="img-fluid" src="img/MEimg-1.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                        </div>
+                        <div class="col-12 col-sm-3 mb-1">
+                            <img class="img-fluid" src="img/MEimg-2.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                        </div>
+                        <div class="col-12 col-sm-3 mb-1">
+                            <div class="row">
+                                <div class="col-12 col-sm-12 mb-3">
+                                    <img class="img-fluid" src="img/MEimg-3.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-12 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-4.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-3 mb-1">
+                            <img class="img-fluid" src="img/MEimg-5.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-lg-6 mb-1">
+                            <div class="h3 mb-2 METextFont METextDark" style="text-transform:none;">เป็นอาสาสมัครช่างภาพถ่ายภาพพิธีเนื่องในวันสำคัญต่างๆ ของอำเภอมัญจาคีรี</div>
+                            <div class="row mb-1">
+                                <div class="col-12 col-sm-12 mb-3">
+                                    <img class="img-fluid" src="img/MEimg-7.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-4 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-6.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-4 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-8.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-4 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-9.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-lg-6 mb-1">
+                            <div class="h3 mb-2 METextFont METextDark" style="text-transform:none;">เป็นนักศึกษาวิชาทหารช่วยงานจราจรและงานกิจการนักเรียนโรงเรียนมัญจาศึกษา</div>
+                            <div class="row mb-1">
+                                <div class="col-12 col-sm-12 mb-3">
+                                    <img class="img-fluid" src="img/MEimg-10.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-6 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-11.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                                <div class="col-12 col-sm-6 mb-1">
+                                    <img class="img-fluid" src="img/MEimg-12.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
