Add Certificate image and Edit space between letters

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <span class="fa-li "><i class="fas fa-check"></i></span>
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <p class="mb-0">สร้าง web application</p><p class="mt-0 MEsubtext2">(ภาษา : HTML , CSS , JavaScript)</p> 
+                        <p class="mb-0">สร้าง web application</p><p class="mt-0 MEsubtext2">(ภาษา : HTML, CSS, JavaScript)</p> 
                     </div>
                     <div class="col-12 col-md-6">
                         <ul class="list-inline dev-icons">
@@ -101,7 +101,7 @@
                 <span class="fa-li "><i class="fas fa-check"></i></span>
                 <div class="row">
                     <div class="col-12 col-md-6 mb-0">
-                        <p class="mb-0">เขียนโปรแกรมคอมพิวเตอร์</p><p class="mt-0 MEsubtext2">(ภาษา : Python,C/C++ (arduino),JavaScript)</p> 
+                        <p class="mb-0">เขียนโปรแกรมคอมพิวเตอร์</p><p class="mt-0 MEsubtext2">(ภาษา : Python, C/C++ (arduino), JavaScript)</p> 
                     </div>
                     <div class="col-12 col-md-6">
                         <ul class="list-inline dev-icons">
@@ -119,7 +119,7 @@
             <span class="fa-li "><i class="fas fa-check"></i></span>
             <div class="row">
                 <div class="col-12 col-md-6 mb-0">
-                    <p class="mb-0">ตัดต่อรูปภาพ/วิดีโอ</p><p class="mt-0 MEsubtext2">(ใช้โปรแกรม Adobe photoshop , Adobe premiere pro)</p> 
+                    <p class="mb-0">ตัดต่อรูปภาพ/วิดีโอ</p><p class="mt-0 MEsubtext2">(ใช้โปรแกรม Adobe photoshop, Adobe premiere pro)</p> 
                 </div>
                 <div class="col-12 col-md-6">
                     <ul class="list-inline dev-icons">
@@ -249,8 +249,8 @@
                             <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">เข้าร่วม</span> ค่ายเยาวชนวิศวกรรมคอมพิวเตอร์
                             <br>ภาคฤดูร้อนครั้งที่ 16 ( CESCa16 - OnlineCamp )</div>
                             <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>สาขาวิศวกรรมคอมพิวเตอร์ คณะวิศวกรรมศาสตร์ มหาวิทยาลัยขอนแก่น</p>
-                            <p class="ME-P-TextCONFIG1 mb-1">ค่ายเยาวชนวิศวกรรมคอมพิวเตอร์ ภาคฤดูร้อน หรือค่าย CESCa เนื่องจากอยู่ในช่วงของการแพร่ระบาดของ Covid-19 การจัดค่าย CESCa ครั้งนี้จึงเป็นค่ายออนไลน์ ซึ่งภายในค่ายมีการให้ความรู้ในการเขียนโปรแกรมขั้นพื้นฐาน ได้แก่ การใช้ git เบื้องต้น 
-                                , Machine Learning , การสร้างเว็ปไซต์โดยใช้ภาษา HTML CSS JavaScript และการเขียนโปรแกรมควบคุมหุ่นยนต์ โดยพี่ๆ จากสาขาวิศวกรรมคอมพิวเตอร์ คณะวิศวกรรมศาสตร์ มหาวิทยาลัยขอนแก่น</p>
+                            <p class="ME-P-TextCONFIG1 mb-1">ค่ายเยาวชนวิศวกรรมคอมพิวเตอร์ ภาคฤดูร้อน หรือค่าย CESCa เนื่องจากอยู่ในช่วงของการแพร่ระบาดของ Covid-19 การจัดค่าย CESCa ครั้งนี้จึงเป็นค่ายออนไลน์ ซึ่งภายในค่ายมีการให้ความรู้ในการเขียนโปรแกรมขั้นพื้นฐาน ได้แก่ การใช้ git เบื้องต้น, 
+                                Machine Learning, การสร้างเว็ปไซต์โดยใช้ภาษา HTML CSS JavaScript และการเขียนโปรแกรมควบคุมหุ่นยนต์ โดยพี่ๆ จากสาขาวิศวกรรมคอมพิวเตอร์ คณะวิศวกรรมศาสตร์ มหาวิทยาลัยขอนแก่น</p>
                         </div>
                         <div class="col-12 col-lg-3 MEimgContainer">
                             <div class="row">
@@ -265,8 +265,7 @@
                         <div class="col-12 col-lg-9 mb-3">
                             <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">เข้าร่วม</span> การอบรมให้ความรู้เรื่องคอมพิวเตอร์เชิงควอนตัม
                                 Summer School Quantum Computing (SCQC2021)</div>
-                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b> คณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ร่วมกับ
-                                สาขาวิชาฟิสิกส์ คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์</p>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b> คณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี ร่วมกับสาขาวิชาฟิสิกส์ คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์</p>
                             <p class="ME-P-TextCONFIG1 mb-1">เป็นการอบรมให้ความรู้ภาคประชาชนทั่วไป เกี่ยวกับหลักการทำงานของเครื่องคอมพิวเตอร์เชิงควอนตัม หลักการทางฟิสิกส์
                                 ที่อยู่เบื้องหลังการทำงาน รวมถึงการนำหลักการของควอนตัมคอมพิวเตอร์ไปประยุกต์ใช้ พร้อมกับมีการอบรมภาคปฏิบัติ โดยอาจารย์จากคณะวิทยาศาสตร์ มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี และสาขาวิชาฟิสิกส์ 
                                 คณะวิทยาศาสตร์และเทคโนโลยี มหาวิทยาลัยธรรมศาสตร์
@@ -307,8 +306,9 @@
                         </div>
                         <div class="col-12 col-lg-3 MEimgContainer">
                             <div class="row">
-                                <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/JAXA-img1.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
-                                <div class="col-12 col-sm-12 mb-0"><img class="img-fluid" src="img/JAXA-img2.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                <div class="col-12 col-sm-12 mb-1"><img class="img-fluid" src="img/certificate/2nd Kibo Robot Programming Challenge.jpg" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                <div class="col-12 col-sm-6 mb-1"><img class="img-fluid" src="img/JAXA-img1.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
+                                <div class="col-12 col-sm-6 mb-0"><img class="img-fluid" src="img/JAXA-img2.png" onclick="ClickToShowImg(this)" data-bs-toggle="modal" data-bs-target="#popupImgModal"></div>
                             </div>
                         </div>
                     </div>
@@ -319,8 +319,8 @@
                     <div class="row mb-1">
                         <div class="col-12 col-lg-9 mb-3">
                             <div class="h3 mb-1 METextFont METextDark" style="text-transform:none;"><span class="text-primary text-decoration-underline">เข้าร่วม</span> การประกวดโครงงานวิทยาศาสตร์ ระดับมัธยมศึกษาตอนปลาย สาขาวิทยาศาสตร์ประยุกต์</div>
-                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>กระทรวงการอุดมศึกษา วิทยาศาสตร์ วิจัยและนวัตกรรม ร่วมกับ สมาคมวิทยาศาสตร์แห่งประเทศไทยในพระบรมราชูปถัมภ์
-                                และ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น</p>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>จัดโดย : </b>กระทรวงการอุดมศึกษา วิทยาศาสตร์ วิจัยและนวัตกรรม ร่วมกับสมาคมวิทยาศาสตร์แห่งประเทศไทยในพระบรมราชูปถัมภ์
+                                และคณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น</p>
                             <p class="ME-P-TextCONFIG1 mb-1">ในงานสัปดาห์วันวิทยาศาสตร์ ส่วนภูมิภาค(ภาคตะวันออกเฉียงเหนือ)
                                 ประจำปี พ.ศ.2563 ณ คณะวิทยาศาสตร์ มหาวิทยาลัยขอนแก่น ในหัวข้อโครงงานเรื่อง <b>"การศึกษาการให้ความร้อนจากเกิดปฏิกิริยาเคมีและการเก็บความร้อนของ
                                 ลูกประคบสมุนไพรรูปทรงกรวยและรูปทรงพีระมิดฐานสามเหลี่ยม"</b> </p>
@@ -470,8 +470,8 @@
                     <div class="row mb-1">
                         <div class="col-12 col-lg-9 mb-3">
                             <ul class="fa-ul mb-0"><li><div class="h3 mb-0 METextFont METextDark" style="text-transform: none;"><span class="fa-li"><i class="fas fa-caret-right text-primary mt-3"></i></span>เว็ปไซต์ระบบช่วยเหลืออาสาสมัครหมู่บ้านตรวจสอบ Antigen Test Kit โดยใช้ MachineLearning</div></li></ul>
-                            <p class="ME-P-TextCONFIG3 mb-0 mt-1"><b>ภาษา : </b>HTML , CSS (Bootstrap) , JavaScript </p>
-                            <p class="ME-P-TextCONFIG3 mb-1"><b>เครื่องมือ : </b>Google Teachable Machine , Google Sheets , Github</p>
+                            <p class="ME-P-TextCONFIG3 mb-0 mt-1"><b>ภาษา : </b>HTML, CSS (Bootstrap), JavaScript </p>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>เครื่องมือ : </b>Google Teachable Machine, Google Sheets, Github</p>
 
                             <p class="ME-P-TextCONFIG1 mb-1">เป็นเว็ปไซต์สำหรับให้ผู้ใช้งานทั่วไปที่เป็นผู้เดินทางมาจากพื้นที่เสี่ยงในการติดเชื้อ Covid-19 เข้ามากรอกข้อมูลพร้อมกับนำชุดตรวจ ATK มาประมวลผลผ่านหน้าเว็ปเพื่อบันทึก
                                 ผลของชุดตรวจนั้น และมีส่วนของหน้า dashboard สำหรับอาสาสมัครหมู่บ้าน(อสม.)ที่จะนำข้อมูลไปใช้งาน ระบบนี้สร้างโดยการ Training MachineLearning ผ่าน <a href="https://teachablemachine.withgoogle.com/" class="text-primary">Google Teachable Machine</a>โดยใช้รูปภาพชุดตรวจ Covid-19 แบบ ATK จะได้เป็น
@@ -498,10 +498,10 @@
                             <ul class="fa-ul mb-0"><li><div class="h3 mb-0 METextFont METextDark" style="text-transform: none;"><span class="fa-li"><i class="fas fa-caret-right text-primary mt-3"></i></span>กล่อง IoT รายงานสถานะอุณหภูมิ ความชื้น แรงดันไฟฟ้า 
                                 ผ่านแอปพลิเคชั่น Blynk และ Line</div></li></ul>
                             <p class="ME-P-TextCONFIG3 mb-0 mt-1"><b>ภาษา : </b>C (Arduino IDE)</p>
-                            <p class="ME-P-TextCONFIG3 mb-1"><b>อุปกรณ์ : </b>Arduino NodeMCU ESP8266 , DHT11 , ZMPT101B</p>
+                            <p class="ME-P-TextCONFIG3 mb-1"><b>อุปกรณ์ : </b>Arduino NodeMCU ESP8266, DHT11, ZMPT101B</p>
 
                             <p class="ME-P-TextCONFIG1 mb-1">โปรเจคนี้เป็นโครงงาน IS ระดับชั้นมัธยมศึกษาปีที่ 5 ของผมครับ
-                                ซึ่งเป็นกล่อง Iot (internet of things) ที่มีเซ็นเซอร์รับค่าอุณหภูมิ ความชื้น แรงดันไฟฟ้า ต่อเข้ากับบอร์ด Arduino (node MCU)
+                                ซึ่งเป็นกล่อง Iot(internet of things) ที่มีเซ็นเซอร์รับค่าอุณหภูมิ ความชื้น แรงดันไฟฟ้า ต่อเข้ากับบอร์ด Arduino (node MCU)
                                 เขียนโปรแกรมให้ต่อกับ wifi บ้าน แล้วส่งค่าเข้าไปที่แอปพลิเคชั่น Blynk และ Line โดยเขียนให้ส่งค่าอุณหภูมิและความชื้นของอากาศช่วงเช้าไปที่ Line ผ่าน bot line notify
                                 และแจ้งเตือนเมื่อค่าแรงดันไฟฟ้ามีความผิดปกติ เช่น ไฟดับ ไฟตก มีปลั๊กสำหรับควบคุมการเปิดปิดเครื่องใช้ไฟฟ้าผ่านแอปพลิเคชัน Blynk
                             </p>
@@ -529,7 +529,7 @@
                     
                     <div class="row">
                         <div class="col-12 col-sm-12">
-                            <iframe style="width:100%;height:700px" src="https://online.fliphtml5.com/chqqg/mvyd/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
+                            <iframe style="width:100%;height:700px" src="https://online.fliphtml5.com/chqqg/isce/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe>
                         </div>
                     </div>
 
